--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.7.0",
+    "@mantine/form": "^7.7.1",
     "@mantine/hooks": "^7.7.0",
     "@tabler/icons-react": "^3.1.0",
     "react": "^18.2.0",
